--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .background {
-  background-image: url("C:\Users\julia\OneDrive\Documents\reactFinalGame\math-game\src\pages\Mbg.jpg");
+  background-image: url("C:\Users\julia\OneDrive\Documents\reactFinalGame\math-game\src\pages\mbg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
